--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,18 @@ body {
   background-color: black;
 }
 
+video {
+	position: fixed; 
+	right: 0; 
+	bottom: 0;
+	min-width: 100%; min-height: 100%;
+	width: auto; height: auto;
+	z-index: -2;
+	background-size: cover;
+	background-position: center; 
+	opacity: 1;
+}
+
 nav,
 main {
   display: none;
@@ -19,6 +31,7 @@ h2 {
   font-size: 1.5em;
   color: rgb(250, 250, 250);
   margin: 0;
+  text-shadow: 3px 2px 1px #000;
 }
 h1 {
   margin-top: 10px;
@@ -41,8 +54,28 @@ h1 {
   text-align: center;
   width: 100%;
   color: rgb(240, 240, 240);
-  text-shadow: none;
+  text-shadow: 3px 2px 1px #000;
 }
+#player {
+	position: absolute;
+	left: -800px; top: -800px;
+	z-index: -99;
+	opacity: 1;
+}
+#overlay {
+	position: fixed;
+	left: 0px; top: 0px;
+	width: 100%; height: 100%;
+	z-index: -1;
+	background-repeat: repeat;
+}
+#loading {
+	display: inline-block;
+	width: 80%;
+	height: 4px;
+	background-color: rgba(255,255,255,0.5);
+}
+
 .background {
   z-index: -2;
   width: 100%;
@@ -65,7 +98,7 @@ h1 {
   top: 40%;
   width: 100%;
   position: absolute;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+  text-shadow: 3px 2px 1px #000;
 }
 .under-nav {
   left: 0;
